--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 
 		<!-- testing -->
 		<instancio-junit.version>5.3.0</instancio-junit.version>
+		<junit-pioneer.version>2.3.0</junit-pioneer.version>
 	</properties>
 
 	<dependencies>
@@ -183,6 +184,35 @@
 				<scope>test</scope>
 			</dependency>
 
+			<!-- https://mvnrepository.com/artifact/org.junit-pioneer/junit-pioneer -->
+			<!--        JUnit 5 Extension Pack -->
+			<!--        https://junit-pioneer.org/docs/ -->
+			<dependency>
+				<groupId>org.junit-pioneer</groupId>
+				<artifactId>junit-pioneer</artifactId>
+				<version>${junit-pioneer.version}</version>
+			</dependency>
+
+
+			<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson/jackson-bom -->
+			<!-- https://github.com/FasterXML/jackson-bom -->
+			<dependency>
+				<groupId>com.fasterxml.jackson</groupId>
+				<artifactId>jackson-bom</artifactId>
+				<version>${jackson-bom.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+
+			<!-- spring boot official -->
+
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
